# BlockCrash

./: BlockGenerate.cpp  BlockGenerate.h  Board.cpp  Board.h  CMakeLists.txt  README.md  main.cpp  mainGUI.cpp  maintest.cpp  res.qrc  widget.cpp  widget.h  widget.ui
ui/: widget.cpp  widget.h  widget.ui
